show widget fullscreen on mobile devices + some small UI fixes

--- a/src/components/ChatWindow/ChatWindow.css
+++ b/src/components/ChatWindow/ChatWindow.css
@@ -20,7 +20,6 @@
 
 .sc-message-list {
   flex: 1;
-  overflow-y: auto;
   background-color: white;
   background-size: 100%;
   padding: 40px 0px;
