--- a/src/components/Messages/Message.css
+++ b/src/components/Messages/Message.css
@@ -82,7 +82,7 @@
   border: none;
   width: 100%;
   font-family: inherit;
-  font-size: .9rem;
+  font-size: 16px;
   line-height: 3;
   padding-right: 5px;
 }
